# 3d-data-processor-core

./: CMakeLists.txt  README.md
include/3d_data_processing/: data_object_3d.hpp  json_parser.hpp
src/: data_object_3d.cpp  json_parser.cpp  main.cpp
